--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,23 @@
 
   <title>health_hub</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
+  <script>
+    var firebaseConfig = {
+    apiKey: "AIzaSyDoOWEcvipbvBTTfb0mbt6k5NjNHg67vpo",
+    authDomain: "healthhub-78dde.firebaseapp.com",
+    projectId: "healthhub-78dde",
+    storageBucket: "healthhub-78dde.appspot.com",
+    messagingSenderId: "680664981067",
+    appId: "1:680664981067:web:769578378e64f3a50d37ce"
+  };
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
